<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center|center_horizontal|center_vertical"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dialogTitle"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <RadioGroup
            android:id="@+id/rg"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/rbSin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/Sin" />

            <RadioButton
                android:id="@+id/rbCos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Cos" />

            <RadioButton
                android:id="@+id/rbTan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Tan" />

            <RadioButton
                android:id="@+id/rbSinH"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/SinH" />

            <RadioButton
                android:id="@+id/rbCosH"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/CosH" />
        </RadioGroup>

    </LinearLayout>
</LinearLayout>